--- a/themes/dafi/css/style.css
+++ b/themes/dafi/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: pink;
+    background-color: rgb(194, 194, 194);
 }
 
 * {
@@ -47,6 +47,7 @@ body {
 
 .title, .logo {
     padding: 3em 3em 3em 0;
+    width: 300px;
 }
 
 @media (max-width: 767px) {
