--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -14,6 +14,8 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'footer';
 @import 'mobile-menu';
 @import 'img';
+@import 'technology';
+@import 'sidebar';
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap');
 
