--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -1,4 +1,12 @@
 $font-color: #000;
 $font-alternative-color: #fff;
-$background-color: #bdbdbd;
-$footer-background: linear-gradient(#b4b4b4, #000);
+$background-color: rgb(176, 176, 212);
+$footer-background: linear-gradient(#2c1fe0, #12105f);
+$grid-frame: #01f;
+$grid-box-color: #cac9c9;
+
+$font-color-dark: #6a6cdb;
+$font-alternative-color-dark: #fff;
+$background-color-dark: #000;
+$background-main-dark: #161616;
+$footer-background-dark: #161616;
