--- a/themes/kmom02/incl/header.twig
+++ b/themes/kmom02/incl/header.twig
@@ -16,6 +16,10 @@
 
     <link rel="icon" href="{{ theme_url }}/../shared/img/favicon.ico">
     <link rel="stylesheet" href="{{ theme_url }}/css/mobile-menu.css" type="text/css" />
-    <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+    {% if config.session.theme == "dark" %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.min.css" type="text/css" />
+    {% else %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style.min.css" type="text/css" />
+    {% endif %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
