--- a/themes/kmom02/scss/sidebar.scss
+++ b/themes/kmom02/scss/sidebar.scss
@@ -20,8 +20,8 @@ h1 {
 
 .sidebar {
   grid-area: sidebar;
-  background-color: #ebf3ee;
-  border: 2px solid #00ff0d;
+  background-color: $grid-box-color;
+  border: 2px solid $grid-frame;
   padding: 1em;
   float: left;
   border-radius: 8px;
