--- a/themes/kmom02/scss/technology.scss
+++ b/themes/kmom02/scss/technology.scss
@@ -23,8 +23,8 @@ h1 {
 }
 
 .grid div {
-  background-color: #ebf3ee;
-  border: 2px solid #00ff0d;
+  background-color: $grid-box-color;
+  border: 2px solid $grid-frame;
   padding: 1em;
   border-radius: 8px;
   text-align: center;
