--- a/themes/kmom02/scss/style-dark.scss
+++ b/themes/kmom02/scss/style-dark.scss
@@ -16,6 +16,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'img';
 @import 'technology';
 @import 'sidebar';
+@import 'gallery';
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap');
 
