--- a/themes/kmom02/css/style-dark.css
+++ b/themes/kmom02/css/style-dark.css
@@ -6490,6 +6490,10 @@ pre code {
   font-size: 25px;
 }
 
+.nav a {
+  color: #6a6cdb;
+}
+
 .nav ul li {
   padding: 0 1em;
 }
@@ -6567,7 +6571,7 @@ h1 {
 
 .grid div {
   background-color: #cac9c9;
-  border: 2px solid #0011ff;
+  border: 2px solid #01f;
   padding: 1em;
   border-radius: 8px;
   text-align: center;
@@ -6651,7 +6655,7 @@ h1 {
 .sidebar {
   grid-area: sidebar;
   background-color: #cac9c9;
-  border: 2px solid #0011ff;
+  border: 2px solid #01f;
   padding: 1em;
   float: left;
   border-radius: 8px;
@@ -6725,6 +6729,46 @@ a {
     margin-left: 0;
   }
 }
+/* Grid layout */
+.gallery {
+  display: grid;
+  gap: 1em;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  grid-template-areas: "img1 img2 img3" "img4 img5 img6" "img7 img8 img9";
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  margin-top: 25px;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+img embed object video {
+  max-width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .gallery {
+    grid-template-columns: 1fr;
+    grid-template-areas: "img1" "img2" "img3" "img4" "img5" "img6" "img7" "img8" "img9";
+  }
+}
 * {
   font-family: "Roboto", sans-serif;
 }
@@ -6738,7 +6782,7 @@ h6 {
 }
 
 body {
-  background-color: #000000;
+  background-color: #000;
 }
 
 * {
