--- a/themes/kmom02/incl/footer.twig
+++ b/themes/kmom02/incl/footer.twig
@@ -4,11 +4,13 @@
             <a href="{{ social.url }}" title="{{ social.title }}" role="button">
                 <i class="{{ social.icon }}" aria-hidden="true"></i>
                 <span class="sr-only">{{ social.title }}</span>
+                <i class="fa-solid fa-house"></i>
             </a>
         {% endfor %}
     </div>
     <p>
-        En footer med lite text.
+        <a href="?action=theme">Swap theme</a>
+        <a href="?action=session_destroy">Destroy Session</a>
     </p>
 </div>
 
