--- a/themes/kmom02/scss/img.scss
+++ b/themes/kmom02/scss/img.scss
@@ -1,6 +1,8 @@
 img {
   border-style: none;
   width: 300px;
+  border: 5px solid $grid-frame;
+  border-radius: 10px;
 }
 
 .main {
@@ -8,6 +10,7 @@ img {
   background-color: $font-alternative-color;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+  border: 3px solid $grid-frame;
   margin: 0 auto;
   margin-top: 25px;
   margin-bottom: 25px;
