--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -1,11 +1,12 @@
 $font-color: #000;
 $font-alternative-color: #fff;
-$background-color: rgb(176, 176, 212);
+$background-color: rgb(178, 178, 196);
 $footer-background: linear-gradient(#2c1fe0, #12105f);
-$grid-frame: #01f;
+$grid-frame: rgb(0, 89, 255);
 $grid-box-color: #cac9c9;
 
-$font-color-dark: #6a6cdb;
+$font-color-dark: #8b8cc7;
+$font-color-dark2: #0045c7;
 $font-alternative-color-dark: #fff;
 $background-color-dark: #000;
 $background-main-dark: #161616;
