--- a/themes/kmom02/scss/code.scss
+++ b/themes/kmom02/scss/code.scss
@@ -1,9 +1,10 @@
 code {
   margin: 0 0.1em;
   padding: 0.1em 0.2em;
-  border: 1px solid #ccc;
+  border: 1px solid $grid-frame;
   border-radius: 0.3em;
-  background: #f5f5f5;
+  background: $font-color;
+  color: $font-alternative-color;
   font-family: monospace;
   font-size: 0.85rem;
   line-height: 1.9824;
@@ -11,9 +12,10 @@ code {
 
 pre {
   padding: 0 1em;
+  background-color: $font-color;
   border: 1px solid #ccc;
   border-radius: 0.3em;
-  background: #f5f5f5;
+  background: $font-color;
 }
 
 pre code {
