--- a/themes/kmom02/scss/sidebar.scss
+++ b/themes/kmom02/scss/sidebar.scss
@@ -20,9 +20,9 @@ h1 {
 
 .sidebar {
   grid-area: sidebar;
-  background-color: $grid-box-color;
   border: 2px solid $grid-frame;
   padding: 1em;
+  margin-bottom: 10px;
   float: left;
   border-radius: 8px;
   font-weight: bold;
@@ -51,37 +51,44 @@ a {
 
 .css { 
   grid-area: css;
-  background-color: #cde1ff; 
+  background-color: $font-color;
+  color: $font-alternative-color;
 }
 
 .html { 
   grid-area: html;
-  background-color: #ffe4e1;
+  background-color: $font-color;
+  color: $font-alternative-color;
 }
 
 .javascript { 
   grid-area: javascript;
-  background-color: #fffacd;
+  background-color: $font-color;
+  color: $font-alternative-color;
 }
 
 .php { 
   grid-area: php;
-  background-color: #e0ffff;
+  background-color: $font-color;
+  color: $font-alternative-color;
 }
 
 .python { 
   grid-area: python;
-  background-color: #fafad2; 
+  background-color: $font-color;
+  color: $font-alternative-color;
 }
 
 .git { 
   grid-area: git;
-  background-color: #f5f5dc;
+  background-color: $font-color;
+  color: $font-alternative-color;
 }
 
 .sqlite { 
   grid-area: sqlite;
-  background-color: #d8bfd8; 
+  background-color: $font-color;
+  color: $font-alternative-color;
 }
 
 @media screen and (max-width: 768px) {
